# AI-Stem-Separation

./: .gitignore  OLLAMA-PROGRESS-REPORT.md  README.md  alternative-approaches.md  app.py  ollama-setup-report.md  pyproject.toml  run-ollama-brainstorm.sh
.github/: *.instructions.md  AI_REVIEW_SETUP.md  EXAMPLE_REVIEW.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  SECRETS_TEMPLATE.md  ai-review-config.yml
.github/workflow/: pr-summary-22b.yml
.github/workflows/: ai-pr-review.yml  ai_reviewer.py  multi_provider_reviewer.py  pr-summary-22b.yml
PreviousResearch/librosa-demo 2/: =RESET=clean.py  bib.py  main.py  prepare_audio_files.py
Progress Report 1/: README.md  validation-report-Progress Report 1.md
Progress Report 1/working-session/Solo-Design-and-Development-Activity/: Copy of Yovannoa-Design-and-Development.docx  Design and Development - Complete a Tutorial.docx  Haedon - Philosophy.docx  Untitled document.docx  (+1 more)
librosa-demo/: README.md  audio_processing.py  audio_utils.py  requirements.txt
librosa-demo/audio/: intergalactic_100-full.flac  intergalactic_100-stem.flac
music-separator-unet/: README.md
music-separator-unet/checkpoints/: unet_best.pt
progress-report-1/: README.md  audio_utils.py  main.py  requirements.txt
progress-report-2/LibrosaDemo-PR1/: START_HERE.md  phase3_demo.py
progress-report-2/Skip_Demo/: demo_unet.py  prep_from_dir.py  train.py
progress-report-2/batchnormdemo/: batchnormdemo.py  requirements.txt
progress-report-2/librosa-demo 2/: README.md
progress-report2/: unet-learning-notes.md
(+103 files in other folders)
