[project]
name = "music-separator-space"
version = "0.1.0"
description = "Music source separation using U-Net - separates audio into drums, bass, other, and vocals"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.21.0",
    "gradio>=4.0.0",
    "pyyaml>=6.0.0",
    "huggingface-hub>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
deploy = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "mlflow>=2.5.0",
    "dvc[s3]>=3.0.0",
]
